// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> snapshots renders default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(191,100%,40%);
  border-radius: 2px;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 16px;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  title=""
  type="info"
>
  <div
    className="c1"
  >
    
    Default
  </div>
</div>
`;

exports[`<Alert /> snapshots renders error 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(13,100%,40%);
  border-radius: 2px;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 16px;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  title=""
  type="error"
>
  <div
    className="c1"
  >
    
    Error
  </div>
</div>
`;

exports[`<Alert /> snapshots renders icon if provided 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(191,100%,40%);
  border-radius: 2px;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 16px;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  title=""
  type="info"
>
  <div
    className="c1"
  >
    
    Default
  </div>
</div>
`;

exports[`<Alert /> snapshots renders success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(161,54%,48%);
  border-radius: 2px;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 16px;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  title=""
  type="success"
>
  <div
    className="c1"
  >
    
    Success
  </div>
</div>
`;

exports[`<Alert /> snapshots renders title if provided 1`] = `
.c4 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  color: hsl(0,0%,10%);
  font-size: 16px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(191,100%,40%);
  border-radius: 2px;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 16px;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  margin-bottom: 8px;
}

.c3 {
  color: hsl(0,0%,100%);
  font-weight: bold;
}

<div
  className="c0"
  title="title"
  type="info"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      
      <span
        className="c3 c4"
      >
        title
      </span>
    </div>
    Default
  </div>
</div>
`;

exports[`<Alert /> snapshots renders warning 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: hsl(46,69%,49%);
  border-radius: 2px;
  color: hsl(0,0%,100%);
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 16px;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c0 a {
  color: hsl(0,0%,100%);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
  title=""
  type="warning"
>
  <div
    className="c1"
  >
    
    Warning
  </div>
</div>
`;
